snake.css
body{
    /* margin: 0 auto; */
    margin: 20px;
}
.body-div{
    background-color: burlywood;
    width: 1200px;
    height: 600px;
    background-image: url(./images/snake-bg.jpg);
    background-size: 1200px 600px;
    background-repeat: no-repeat;
    background-position: center;
}
.boundary{
    border: 2px solid black;
    margin-left: 100px;
    position: relative;

}
h1{
    padding-top: 20PX;
    margin-left: 100px;
    color: darkblue;
    display: inline;
}
.snake-dot {
    color: #fff;
    font-size: 8px;
    text-align: center;
    background-color: black;
    position: absolute;
    border: 1px solid #fff;
    width: 10px;
    height: 10px;
    
}
.bead{
    background-color: red;
    position: absolute;
    border: 1px solid black;
    width: 8px;
    height: 8px;
    margin: 2px;
    border-radius: 15px;
}

